--- a/svelte_js/public/index.html
+++ b/svelte_js/public/index.html
@@ -10,9 +10,15 @@
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
 
-	<script defer src='/build/bundle.js'></script>
+	<script src='/build/bundle.js'></script>
 </head>
 
 <body>
+	<script>
+		new app.App({
+				target: document.body,
+				props: {name: 'world'}
+			})
+	</script>
 </body>
 </html>
